--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="./main.js"></script>
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main_container">
+        <div class="mini_container">
+            <div class="recuadro blueLight">
+                <div class="botones">
+                    <button id="boton1" class="option_helado">
+                        <img src="" alt="helado">
+                    </button>
+                    <button id="boton2" class="option_pizza">
+                        <img src="" alt="pizza">
+                    </button>
+                    <button id="boton3" class="option_healty">
+                        <img src="" alt="verdura">
+                    </button>
+                </div>
+            </div>
+            <div class="recuadro blueDark">
+                <div class="botones">
+                    <button id="boton4" class="option_play">
+                        <img src="" alt="play">
+                    </button>
+                    <button id="boton5" class="option_pelota">
+                        <img src="" alt="pelota">
+                    </button>
+                    <button id="boton6" class="option_jmesa">
+                        <img src="" alt="jmesa">
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="mini_container">
+            <div class="recuadro purpleDark">
+                <div class="botones">
+                    <button id="boton7" class="option_cardio">
+                        <img src="" alt="cardio">
+                    </button>
+                    <button id="boton8" class="option_gym">
+                        <img src="" alt="gym">
+                    </button>
+                    <button id="boton9" class="option_muay">
+                        <img src="" alt="muay">
+                    </button>
+                </div>
+            </div>
+            <div class="recuadro purpleLight">
+                <div class="botones">
+                    <button id="boton10" class="option_dormir">
+                        <img src="" alt="dormir">
+                    </button>
+                    <button id="boton11" class="option_siesta">
+                        <img src="" alt="siesta">
+                    </button>
+                    <button id="boton12" class="option_series">
+                        <img src="" alt="series">
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="gif">
+        <img src="./imagenes/Baby.png" alt="baby">
+        <div class="linear-activity">
+            <div class="determinate" style="width: 50%"></div>
+        </div>
+        <div class="letras">Yo estoy a tu cargo? 😱</div>
+    </div>
 </body>
 </html>
