--- a/index.html
+++ b/index.html
@@ -10,66 +10,90 @@
 <body>
     <div class="main_container">
         <div class="mini_container">
-            <div class="recuadro blueLight">
+            <div class="recuadro blueLight left top">
                 <div class="botones">
-                    <button id="boton1" class="option_helado">
-                        <img src="" alt="helado">
+                    <button id="boton1" class="option_button backgroundBlueLight">
+                        <img src="./imagenes/helado.png" alt="helado">
                     </button>
-                    <button id="boton2" class="option_pizza">
-                        <img src="" alt="pizza">
+                    <button id="boton2" class="option_button backgroundBlueLight">
+                        <img src="./imagenes/pizza.png" alt="pizza">
                     </button>
-                    <button id="boton3" class="option_healty">
-                        <img src="" alt="verdura">
+                    <button id="boton3" class="option_button backgroundBlueLight">
+                        <img src="./imagenes/brocoli.png" alt="verdura">
                     </button>
                 </div>
+                <div class="linear-activity">
+                    <div class="determinate"></div>
+                </div>
+                <div class="enunciado letras transLeft">
+                    <span id="lleno" value=""></span> % Llenito
+                </div>
             </div>
-            <div class="recuadro blueDark">
-                <div class="botones">
-                    <button id="boton4" class="option_play">
-                        <img src="" alt="play">
+            <div class="recuadro blueDark right top">
+                <div class="botones down">
+                    <button id="boton4" class="option_button backgroundBlueDark">
+                        <img src="./imagenes/play.jpg" alt="play">
                     </button>
-                    <button id="boton5" class="option_pelota">
-                        <img src="" alt="pelota">
+                    <button id="boton5" class="option_button backgroundBlueDark">
+                        <img src="./imagenes/pelota.png" alt="pelota">
                     </button>
-                    <button id="boton6" class="option_jmesa">
-                        <img src="" alt="jmesa">
+                    <button id="boton6" class="option_button backgroundBlueDark">
+                        <img src="./imagenes/jmesa.png" alt="jmesa">
                     </button>
+                </div>
+                <div class="linear-activity">
+                    <div class="determinate"></div>
+                </div>
+                <div class="enunciado letras down transRight">
+                    <span id="satisfecho" value=""></span> % Satisfecho
                 </div>
             </div>
         </div>
         <div class="mini_container">
-            <div class="recuadro purpleDark">
+            <div class="recuadro purpleDark down left">
                 <div class="botones">
-                    <button id="boton7" class="option_cardio">
-                        <img src="" alt="cardio">
+                    <button id="boton7" class="option_button backgroundPurpleDark">
+                        <img src="./imagenes/cardio.jpg" alt="cardio">
                     </button>
-                    <button id="boton8" class="option_gym">
-                        <img src="" alt="gym">
+                    <button id="boton8" class="option_button backgroundPurpleDark">
+                        <img src="./imagenes/pesas.png" alt="gym">
                     </button>
-                    <button id="boton9" class="option_muay">
-                        <img src="" alt="muay">
+                    <button id="boton9" class="option_button backgroundPurpleDark">
+                        <img src="./imagenes/muay_thai.png" alt="muay">
                     </button>
                 </div>
+                <div class="linear-activity">
+                    <div class="determinate"></div>
+                </div>
+                <div class="enunciado letras transLeft">
+                    <span id="endorfinas" value=""></span> % Endorfinas
+                </div>
             </div>
-            <div class="recuadro purpleLight">
-                <div class="botones">
-                    <button id="boton10" class="option_dormir">
-                        <img src="" alt="dormir">
+            <div class="recuadro purpleLight down right">
+                <div class="botones down">
+                    <button id="boton10" class="option_button backgroundPurpleLight">
+                        <img src="./imagenes/dormir.png" alt="dormir">
                     </button>
-                    <button id="boton11" class="option_siesta">
-                        <img src="" alt="siesta">
+                    <button id="boton11" class="option_button backgroundPurpleLight">
+                        <img src="./imagenes/siesta.png" alt="siesta">
                     </button>
-                    <button id="boton12" class="option_series">
-                        <img src="" alt="series">
+                    <button id="boton12" class="option_button backgroundPurpleLight">
+                        <img src="./imagenes/relax.png" alt="series">
                     </button>
+                </div>
+                <div class="linear-activity">
+                    <div class="determinate"></div>
+                </div>
+                <div class="enunciado letras down transRight">
+                    <span id="descanso" value=""></span> % Descansadito
                 </div>
             </div>
         </div>
     </div>
     <div class="gif">
-        <img src="./imagenes/Baby.png" alt="baby">
+        <img class="avatar" src="./imagenes/Baby.png" alt="baby">
         <div class="linear-activity">
-            <div class="determinate" style="width: 50%"></div>
+            <div class="determinate"></div>
         </div>
         <div class="letras">Yo estoy a tu cargo? 😱</div>
     </div>
