--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main_container">
         <div class="mini_container">
             <div class="recuadro blueLight left top">
-                <div class="botones">
+                <div class="botones top">
                     <button id="boton1" class="option_button backgroundBlueLight">
                         <img src="./imagenes/helado.png" alt="helado">
                     </button>
@@ -51,7 +51,7 @@
         </div>
         <div class="mini_container">
             <div class="recuadro purpleDark down left">
-                <div class="botones">
+                <div class="botones top">
                     <button id="boton7" class="option_button backgroundPurpleDark">
                         <img src="./imagenes/cardio.jpg" alt="cardio">
                     </button>
