--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="determinate"></div>
                 </div>
                 <div class="enunciado letras transLeft">
-                    <span id="endorfinas" value=""></span> % Endorfinas
+                    <span id="endorfinas" value=""></span> % Serotonina
                 </div>
             </div>
             <div class="recuadro purpleLight down right">
