--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="determinate" id="relax"></div>
           </div>
           <div class="enunciado letras down transRight">
-            <span id="descanso" value="">100</span> % Descansadito
+            <span id="descanso" value="">100</span> % Relajao
           </div>
         </div>
       </div>
