--- a/index.html
+++ b/index.html
@@ -95,11 +95,15 @@
             <h4><time>00:00:00</time></h4>
         </div>
       <img class="avatar" id="bebito" src="./imagenes/Baby.png" alt="baby" />
+      <audio autoplay loop controls id="audio">
+        <source src="./Audio/firstAudio.mp3" type="audio/mpeg">
+    </audio>
       <div class="linear-activity">
         <div class="determinate" id="progresoTotal"></div>
       </div>
       <div class="letras" id="letras">Yo estoy a tu cargo? 😱</div>
       <button id="reset"><div class="letras">RESET</div></button>
     </div>
+    
   </body>
 </html>
